--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=c0d4d6512192b53aaf54138c67de0c23
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
 # IMPORTANT: You MUST also configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@127.0.0.1:8889/lebonfolder
+DATABASE_URL=mysql://user_name:password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
